roles/monitoring/files/kubernetes-efk/kibana/kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
        environment: production
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - kibana
              topologyKey: kubernetes.io/hostname
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - kibana
                topologyKey: topology.kubernetes.io/zone
  
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:8.3.2
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5601
---

apiVersion: v1
kind: Service
metadata:
  name: kibana-cip
spec:
  selector: 
    app: kibana
  type: ClusterIP 
  ports:
    - port: 8080
      targetPort: 5601 
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: kibana-secret
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - kibana-admin'
  namespace: default
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - kibana.local
    secretName: kibana-tls
  rules:
  - host: kibana.local
    http:
      paths:
      - backend:
          service:
            name: kibana-cip
            port:
              number: 8080
        path: /
        pathType: Prefix
